Adds dummy endpoint for testing pybossa webhook

--- a/bike-rack-linker/conf/application.conf
+++ b/bike-rack-linker/conf/application.conf
@@ -8,6 +8,10 @@ pybossa {
   }
 }
 
+play.filters.hosts {
+  allowed = ["10.0.2.2:9000", "localhost:9000", "localhost"]
+}
+
 orion-client {
   server-url = "http://orion.lab.fi-ware.org:1026"
   token = ""
