--- a/bike-rack-linker/conf/application.conf
+++ b/bike-rack-linker/conf/application.conf
@@ -1,6 +1,6 @@
 # https://www.playframework.com/documentation/latest/Configuration
 pybossa {
-  server-url = "http://localhost:5000/api"
+  server-url = "http://localhost:5000/api/"
   api-key = "fe284c69-1b06-4d6b-97dc-f2928693f7cf"
   project {
     short-name = "bike-rack-linker"
