--- a/bike-rack-pybossa-project/project.json
+++ b/bike-rack-pybossa-project/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bike Rack Linker",
-  "short_name": "bike-rack-linker",
-  "description": "Crowdsourcing bike-rack-linking in trento",
+  "name": "test",
+  "short_name": "test",
+  "description": "test",
   "question": "Are they the same?",
   "webhook": "http://localhost:5000/project/bike-rak-inker/update"
 }
