--- a/bike-rack-linker/conf/application.conf
+++ b/bike-rack-linker/conf/application.conf
@@ -1,11 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 pybossa {
   server-url = "http://localhost:5000/api/"
-  api-key = "fe284c69-1b06-4d6b-97dc-f2928693f7cf"
-  project {
-    short-name = "bike-rack-linker"
-    id = 2
-  }
+  api-key = "1d0b3c17-bedf-4cbd-8a0f-2386bb68a171"
 }
 
 play.filters.hosts {
@@ -16,5 +12,7 @@ orion-client {
   server-url = "http://orion.lab.fi-ware.org:1026"
   token = ""
 }
+
+spraql-endpoint = "http://localhost:8890"
 
 
